# ML-zoomcamp-homework

./: .gitignore  Dockerfile  Ideas_notes_01.md  Notes.md  Notes_module_01.md  Notes_module_02.md  Notes_module_03.md  Notes_module_04.md  Notes_module_05.md  Notes_module_06.md  Notes_module_6.md  README.md  fly.toml  main.py  pyproject.toml
01-intro/: 1.7_intro_to_numpy.ipynb  1.9_intro_to_pandas.ipynb  homework.ipynb
02-regression/: 02_homework.ipynb  02_notebook.ipynb
03-classification/: 03-homework.ipynb  03-notebook.ipynb
04-Evaluation/: 04-notebook.ipynb
05-deployment/: marketing.py  ping.py  predict.py  train.py  workshop-uv-fastapi.ipynb
05-deployment/05-homework/: pyproject.toml
06-trees/: 06-notebook.ipynb
