[project]
name = "ml-zoomcamp-homework"
version = "0.1.0"
description = "Churn prediction service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "scikit-learn==1.6.1",
    "uvicorn>=0.43.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "requests>=2.33.1",
]

[tool.uv.workspace]
members = [
    "05-deployment/05-homework",
]
